--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ seaborn==0.11.2
 scikit-learn==1.3.2
 category_encoders==2.6.3
 xgboost==2.0.1
+fairlearn
+scipy
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
